<resources>
    <string name="app_name">Mobilite</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log in</string>
    <string name="hint_email">Email or Username</string>
    <string name="password_hint">Password</string>
    <string name="free_journeys">Free journeys</string>
    <string name="payments">Payments</string>
    <string name="history">History</string>
    <string name="promotions">Promotions</string>
    <string name="support">Support</string>
    <string name="about">About</string>
    <string name="work_rides">Work rides</string>
    <string name="enter_a_promo_code">Enter a promo code</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="total_points">%d points</string>
    <string name="title_activity_home_maps">Mobilite</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="ride_finished">Finished</string>
    <string name="cancelled">Cancelled</string>
    <string name="forgot_password_help">Forgot Password? Get help</string>
    <string name="this_code_will_expire_in">This code will expire in %s min</string>
    <string name="pick_place">Pick A Place</string>
    <string name="default_info_title">Title</string>
    <string name="default_info_snippet">Info</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <!-- Paste BOTH strings as required -->
    <string name="back4app_app_id">8Vi67NE1jYXFwnM4abbsecIXZoeJQSclpN63YbjE</string>
    <string name="back4app_client_key">3yuVi25ACVQx7p1PTaUF1WaEJPwl5jHYkFaBr0Jc</string>
</resources>